--- a/rimijoker.html
+++ b/rimijoker.html
@@ -1,22 +1,19 @@
-<span id="a">(Enter Github username here)@Enigma</span>:<span id="b">~</span
-><span id="c">$</span> cd (Enter Github username here)/About_Me
-<span id="a">(Enter Github username here)@Enigma</span>:<span id="b">~</span
-><span id="c">$</span> cat (Enter name here).txt<br /><br />
-"<span id="k">Hey there, nice to see you here.</span>" This is (Enter Github
-username here).
+<span id="a">marcstae@zuse-z1</span>:<span id="b">~</span
+><span id="c">$</span> cd marcstae/About_Me
+<span id="a">marcstae@zuse-z1</span>:<span id="b">~</span
+><span id="c">$</span> cat Marc.txt<br /><br />
+"<span id="k">Hey there, nice to see you here.</span>" This is Marc.
 <p>Welcome</p>
 <p>
-  I am a (fill tech role here) engineer, you can checkout my resume here.
-  <a href="#Link"> Resume</a>
+  I'm currently a system engineer apprentice @Aveniq, you can checkout some of my work here.
+  <a href="https://github.com/marcstae"> GitHub</a>
 </p>
 <p>
-  I usally waste my time doing cool projects.<br /><br /><br />You can checkout
-  my projects on my resume, but if you are more tech savy, here is my
-  <a href="#link"> GitHub</a> link.
+  I usally waste my time doing some personal Docker projects. Or spend my time creating photos.<br /><br /><br />You can checkout some of my <a href="https://marcstaeuble.ch/"> work</a> here.
 </p>
-<p>You can visit my LinkedIn, here: <a href="#link">LinkedIn</a> <br /></p>
+<p>You can visit my LinkedIn, here: <a href="https://www.linkedin.com/in/marc-staeuble/">LinkedIn</a> <br /></p>
 
-You can also contact me through email, feel free to send me an email at
-<a href = "mailto: XXXXXXXXX@XXXXX.com">"XXXXXXXXX@XXXXX.com"</a>.
+You can also contact me through Threema, feel free to send me a message at
+<a href = "https://threema.id/NEV67HPB">"Threema ID: NEV67HPB"</a>.
 
 <p>Cheers!</p>
